# pandavas

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: ci.yml
agents/: pandavas-judge.md
commands/: pandavas.md
docs/: HANDOVER.template.md  SKILL_MODE.md  SPEC.md
examples/: demo.py
scripts/: install-claude.ps1  install-claude.sh  install-cursor.ps1  install-cursor.sh
skills/pandavas/: SKILL.md
src/pandavas/: __main__.py  brief.py  cli.py  diffing.py  edits.py  executor.py  gitutils.py  llm.py  nodes.py  orchestrator.py  retrieval.py  spine.py  state.py  testresults.py
tests/: test_arjuna.py  test_best_attempt.py  test_brief.py  test_cli.py  test_diffing.py  test_e2e.py  test_edits.py  test_executor.py  test_gitutils.py  test_judge.py  test_llm.py  test_nakula.py  test_orchestrator.py  test_regression.py  test_retrieval.py  test_skill_e2e.py  test_spine.py  test_testresults.py
