[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandavas"
version = "0.1.0"
description = "An autonomous multi-agent system that resolves a coding task on a repository you already have locally."
requires-python = ">=3.10"
dependencies = ["langgraph>=0.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Fixtures are sample repos (with deliberate bugs), not part of our own suite.
addopts = "--ignore=tests/fixtures"
